# iov-ai-cnn-ptr-drive

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
